--- a/Cadastro.html
+++ b/Cadastro.html
@@ -46,7 +46,7 @@
         <br><br>
 
         <div class="input-field">
-            <input type="email" name="E-mail" id="demo_email" required="required" autocomplete="off">
+            <input type="text" name="E-mail" id="demo_email" required="required" autocomplete="off">
             <span>E-mail</span>
         </div>
 
