--- a/Cadastro.html
+++ b/Cadastro.html
@@ -71,7 +71,7 @@
     </div>
 
     <div class="login">
-        <img src="Logo.jpg" class="img"><br>
+        <img src="Logo.png" class="img">
         <p>Já tem uma conta? <a style="color: blueviolet;" href="Login.html">Clique aqui</a></p>
     </div>
 
