--- a/Login.html
+++ b/Login.html
@@ -52,7 +52,7 @@
     </div>
 
     <div class="login">
-        <img src="Logo.jpg" class="img"><br>
+        <img src="Logo.png" class="img">
         <p>Não tem uma conta? <a style="color: blueviolet;" href="Cadastro.html">Clique aqui</a></p>
     </div>
 
