--- a/Site_institucional/winetemp.html
+++ b/Site_institucional/winetemp.html
@@ -4,6 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Sora:wght@200;400&family=Source+Sans+3:wght@300;400&display=swap"
+        rel="stylesheet">
     <title>Wine Temp</title>
     <link rel="stylesheet" href="winetemp.css ">
 </head>
@@ -13,11 +16,15 @@
         <div class="container">
             <h2>Wine Temp</h2>
             <ul class="navbar">
-                <li>Sobre</li>
+                <li><a href="#">Sobre </a></li>
                 <li>|</li>
-                <li>Nossos valores</li>
+                <li><a href="#">Nossos valores </a></li>
                 <li>|</li>
-                <li>Contato</li>
+                <li><a href="#">Contato </a></li>
+                <li>|</li>
+                <li><a href="#">Cadastre-se</a></li>
+                <li>|</li>
+                <li><a href="#">Login</a></li>
             </ul>
 
         </div>
@@ -33,6 +40,144 @@
         </div>
     </div>
 
+
+    <div class="sobre">
+        <div class="container">
+            <div class="card">
+                <img src="imagens/growth_color.png" alt="">
+                <h4>Quem somos</h4>
+                <p>Somos uma empresa de tecnologia voltada ao ramo de controle de temperatura e umidade em Vínicolas</p>
+
+            </div>
+        </div>
+    </div>
+    <!-- "Nossa equipe" -->
+    <div id="equipe">
+        <h1>Nossa equipe</h1>
+        <section>
+            <div class="row">
+                <div class="foto">
+                    <section class="box2">
+                        <img src="images" alt="" width="150px" height="400px" /></a>
+                        <header>
+                            <h3>Luiz</h3>
+                        </header>
+                        <p>
+                            <!-- Responsavel pela criação e desenvolvimento do WebSite -->
+                        </p>
+
+                    </section>
+                </div>
+                <div class="foto">
+                    <section class="box2">
+                        <img src="images" alt="" width="150px" height="400px" /></a>
+                        <header>
+                            <h3>Kauê</h3>
+                        </header>
+                        <p>
+                            <!-- Responsavel pela criação e desenvolvimento do WebSite -->
+                        </p>
+                    </section>
+                </div>
+                <div class="foto">
+                    <section class="box2">
+                        <img src="images" alt="" width="150px" height="400px" />
+                        </a>
+                        <header>
+                            <h3>Rebeca</h3>
+                        </header>
+                        <p>
+                            <!-- Responsavel pela criação e desenvolvimento do algoritmo -->
+                        </p>
+                    </section>
+                </div>
+                <div class="foto">
+                    <section class="box2">
+                        <img src="images" alt="" width="150px" height="400px" /></a>
+                        <header>
+                            <h3>Eduardo</h3>
+                        </header>
+                        <p>
+                            <!-- Responsavel pela criação e desenvolvimento do algoritmo -->
+                        </p>
+                    </section>
+                </div>
+                <div class="foto">
+                    <section class="box2">
+                        <img src="images" alt="" width="150px" height="400px" /></a>
+                        <header>
+                            <h3>Pedro</h3>
+                        </header>
+                        <p>
+                            <!-- Responsavel pela criação e desenvolvimento do algoritmo -->
+                        </p>
+
+                    </section>
+                </div>
+                <div class="foto">
+                    <section class="box2">
+                        <img src="images" alt="" width="150px" height="400px" /></a>
+                        <header>
+                            <h3>Marcelo</h3>
+                        </header>
+                        <p>
+                            <!-- Responsavel pela criação e desenvolvimento do algoritmo -->
+                        </p>
+
+                    </section>
+                </div>
+            </div>
+        </section>
+
+    </div>
+    <div class="card">
+        <img src="" alt="">
+        <h4>Nossos serviços </h4>
+        <p> Fundada com a missão de aprimorar a experiência de envelhecimento do vinho, estamos comprometidos em
+            proporcionar um ambiente perfeito para que cada garrafa alcance sua excelência máxima.<br><br>
+
+            Combinando tecnologia de ponta e paixão pela enologia, nossa equipe de especialistas desenvolveu um sistema
+            inovador de monitoramento de temperatura e umidade, projetado exclusivamente
+            para a fase crucial de envelhecimento do vinho. Entendemos que cada gota merece ser tratada com o máximo
+            cuidado, e é por isso que nossos sensores de alta precisão garantem que cada
+            garrafa seja preservada nas condições ideais.<br><br>
+
+            Além disso, oferecemos um sistema de monitoramento remoto que permite aos nossos clientes acessar os dados
+            de suas coleções de vinho a qualquer momento e em qualquer lugar. Com a
+            tranquilidade de saber que seus tesouros estão sendo cuidadosamente protegidos, nossos clientes podem
+            desfrutar plenamente da jornada de envelhecimento de seus vinhos, sabendo que
+            estão em boas mãos.</p>
+
+    </div>
+
+    </div>
+    </div>
+
+    <div class="card">
+        <img src="" alt="">
+        <h4>Por que a WineTemp?</h4>
+        <p>Por que Escolher a WineTemp<br><br>
+
+            Ao considerar onde confiar a guarda e o envelhecimento de sua preciosa coleção de vinhos, é crucial
+            selecionar uma empresa que combine expertise, inovação e comprometimento com a qualidade.<br><br>
+
+            1. *Tecnologia de Ponta:* Utilizamos o que há de mais avançado em tecnologia de monitoramento de temperatura
+            e umidade, garantindo condições ideais para o envelhecimento do vinho e
+            protegendo seus estoques de variações indesejadas.<br><br>
+
+            2. *Experiência e Conhecimento:* Com anos de experiência no setor, estamos preparados para atender às
+            necessidades mais exigentes dos apreciadores de vinho.<br><br>
+
+            3. *Conveniência e Tranquilidade:* Com nosso sistema de monitoramento remoto, você pode acessar os dados de
+            seus barris de vinho a qualquer momento, de qualquer lugar. Isso proporciona a
+            tranquilidade de saber que suas garrafas estão sendo cuidadas.<br><br>
+
+            4. *Compromisso com a Satisfação do Cliente:* Na WinwTemp, priorizamos a satisfação do cliente em tudo o que
+            fazemos. Estamos aqui para atender às suas necessidades, responder às suas
+            perguntas e garantir que sua experiência conosco seja excepcional em todos os aspectos.</p>
+
+    </div>
 </body>
+
 
 </html>
