Refazendo comentário- Alterações na tela de login e cadastro e pequenas modificações nas telas iniciais.

--- a/Site_institucional/Cadastro.html
+++ b/Site_institucional/Cadastro.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastro</title>
-    <link rel="stylesheet" href="style-cadastro.css">
+    <link rel="stylesheet" href="css/style-cadastro.css">
     <link href="https://fonts.googleapis.com/css2?family=Sora:wght@200;400&family=Source+Sans+3:wght@300;400&display=swap"rel="stylesheet">
 
 </head>
@@ -64,15 +64,14 @@
             <span>Confime a senha</span>
         </div>
 
-        <br><br>
-
+        <p>Já tem uma conta? <a style="color: rgb(255, 203, 238);" href="Login.html">Clique aqui</a></p><br>
         <button class="botao" onclick="cadastro()">Cadastrar-se</button>
 
     </div>
 
     <div class="login">
-        <img src="Logo.png" class="img">
-        <p>Já tem uma conta? <a style="color: rgb(255, 203, 238);" href="Login.html">Clique aqui</a></p>
+        <img src="imgs/Logo-Com Fundo.png" class="img">
+       
     </div>
 
 </body>
