--- a/Site_institucional/Login.html
+++ b/Site_institucional/Login.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <link rel="stylesheet" href="style-login.css">
+    <link rel="stylesheet" href="css/style-login.css">
     <link
         href="https://fonts.googleapis.com/css2?family=Sora:wght@200;400&family=Source+Sans+3:wght@300;400&display=swap"
         rel="stylesheet">
@@ -39,11 +39,12 @@
         </div>
 
         <div class="checkbox">
-            <p>Exibir senha</p>
-            <input type="checkbox" onclick="mostrarsenha()">
+            <p>Exibir senha</p>  
+            <input type="checkbox" onclick="mostrarsenha()"> 
         </div>
 
-        <a style="color:rgb(255, 203, 238);" href="">Esqueceu a senha?</a>
+        <a style="color:rgb(140, 0, 0, 0.979);" href="">Esqueceu a senha?</a>
+        <p>Não tem uma conta? <a style="color:rgba(140, 0, 0, 0.979);" href="Cadastro.html">Clique aqui</a></p>
 
         <br><br>
 
@@ -51,9 +52,9 @@
 
     </div>
 
-    <div class="login">
-        <img src="Logo.png" class="img">
-        <p>Não tem uma conta? <a style="color:rgb(255, 203, 238);" href="Cadastro.html">Clique aqui</a></p>
+    <div class="fundo">
+        <img src="imgs/fundinho.JPG" >
+       
     </div>
 
 </body>
