Alteração na area de serviços, quem somos e por que wineTemp?

--- a/Site_institucional/winetemp.html
+++ b/Site_institucional/winetemp.html
@@ -22,9 +22,9 @@
   
                 <li><a href="#">Contato</a></li>
       
-                <li><a href="#">Cadastre-se</a></li>
+                <li><a href="Cadastro.html">Cadastre-se</a></li>
                 <li>|</li>
-                <li><a href="#">Login</a></li>
+                <li><a href="Login.html">Login</a></li>
             </ul>
         </div>
     </div>
@@ -37,7 +37,7 @@
             <p class="letra">Great <br>
                 performances<br>
                 on everything<br>
-                we do
+                we do.
             </p>
         </div>
     </div>
@@ -48,7 +48,9 @@
             <div class="card">
                 <img src="imgs/imagem-de-barris-de-vinho.avif" alt="">
                 <h4>Quem somos</h4>
-                <p>Somos uma empresa de tecnologia voltada ao ramo de controle de temperatura e umidade em Vínicolas</p>
+                <p>Somos uma empresa de tecnologia voltada ao ramo de controle de temperatura e umidade em Vínicolas, visando diminuir percas e otimizar seu negócio, 
+                    para uma gestão mas eficiente com sistemas de qualidade.
+                </p>
 
             </div>
         </div>
@@ -132,9 +134,10 @@
         </section>
 
     </div>
-    <div class="card">
+    <div class="servicos">
         <img src="" alt="">
-        <h4>Nossos serviços </h4>
+        <div class="card-servicos">
+            <h4 class="letra-servicos">Nossos serviços </h4>
         <p> Fundada com a missão de aprimorar a experiência de envelhecimento do vinho, estamos comprometidos em
             proporcionar um ambiente perfeito para que cada garrafa alcance sua excelência máxima.<br><br>
 
@@ -149,7 +152,7 @@
             tranquilidade de saber que seus tesouros estão sendo cuidadosamente protegidos, nossos clientes podem
             desfrutar plenamente da jornada de envelhecimento de seus vinhos, sabendo que
             estão em boas mãos.</p>
-
+        </div>
     </div>
 
     </div>
@@ -159,7 +162,8 @@
     <!-- Seção "Por que Wine Temp?" -->
 <section id="por-que-winetemp">
     <div class="container">
-        <h2 class="titulo-card">Por que a WineTemp?</h2>
+        <h2 class="titulo-card">Por que a <br>
+            WineTemp?</h2>
         <div class="card">
             <h4>Tecnologia de Ponta</h4>
             <p>Utilizamos o que há de mais avançado em tecnologia de monitoramento de temperatura e umidade.</p>
