Feito: alterações da calculadora, integração do arduino com banco de dados na VM

--- a/dashboardATT/dashboard.html
+++ b/dashboardATT/dashboard.html
@@ -137,7 +137,7 @@
                   <div class="alerta">
                     <div class="organizacao">
                       <div class="temp">
-                        <b>10 Barris 🚨</b>
+                        <b>10 Barris </b>
                     </div>
                     <div class="desc1">
                         Temperatura Abaixo
@@ -145,7 +145,7 @@
                     </div>
                       <div class="organizacao">
                         <div class="temp">
-                          <b>20 Barris 🚨</b>
+                          <b>20 Barris </b>
                       </div>
                       <div class="desc1">
                           Temperatura Elevada
