--- a/integraArduinoide/index.html
+++ b/integraArduinoide/index.html
@@ -24,10 +24,10 @@
           <img src="logo.png" alt="Logo" class="logo">
           <div class="container1">
             <ul class="navbar">
-              <li><a href="">Geral</a></li>
+              <li><a href="/Sprint2/dashboardATT/dashboard.html">Geral</a></li>
     
               <li>|</li>
-              <li><a href="Site_institucional/Login.html">Sair</a></li>
+              <li><a href="/Sprint2/Site_institucional/Login.html">Sair</a></li>
             </ul>
           </div>
         </div>
