--- a/Site_institucional/winetemp.html
+++ b/Site_institucional/winetemp.html
@@ -13,14 +13,14 @@
 
 <body>
     <div class="header">
-        <img src="imgs/Logo.png" alt="Logo" class="logo">
+        <a href="#sobre"><img src="imgs/Logo.png" alt="Logo" class="logo"></a>
         <div class="container">
             <ul class="navbar">
-                <li><a href="#">Sobre</a></li>
+                <li><a href="#sobre-nos">Sobre Nós</a></li>
 
-                <li><a href="#">Nossos valores</a></li>
+                <li><a href="Login.html">Dashboard</a></li>
 
-                <li><a href="#">Contato</a></li>
+                <li><a href="/Calculadora/Calculadora1.html">Simulador Financeiro</a></li>
 
                 <li><a href="Cadastro.html">Cadastre-se</a></li>
                 <li>|</li>
