--- a/Site_institucional/winetemp.html
+++ b/Site_institucional/winetemp.html
@@ -63,7 +63,7 @@
             <div class="row">
                 <div class="foto">
                     <section class="box2">
-                        <img src="Foto_luiz.jpeg" alt="" width="240px" height="300px" /></a>
+                        <img src="/Site_institucional/imgs/Foto_luiz.jpeg" alt="" width="240px" height="300px" /></a>
                         <header>
                             <h3>Luiz</h3>
                         </header>
@@ -75,7 +75,7 @@
 
                     <div class="foto">
                         <section class="box2">
-                            <img src="Foto_kaue.jpeg" alt="" width="240px" height="300px" /></a>
+                            <img src="/Site_institucional/imgs/Foto_kaue.jpeg" alt="" width="240px" height="300px" /></a>
                             <header>
                                 <h3>Kauê</h3>
                             </header>
@@ -86,7 +86,7 @@
 
                         <div class="foto">
                             <section class="box2">
-                                <img src="Foto_rebeca.jpeg" alt="" width="240px" height="300px" />
+                                <img src="/Site_institucional/imgs/Foto_rebeca.jpeg" alt="" width="240px" height="300px" />
                                 </a>
                                 <header>
                                     <h3>Rebeca</h3>
@@ -100,7 +100,7 @@
                             </div>
                             <div class="foto">
                                 <section class="box2">
-                                    <img src="Foto_eduardo.jpeg" alt="" width="240px" height="300px" /></a>
+                                    <img src="/Site_institucional/imgs/Foto_eduardo.jpeg" alt="" width="240px" height="300px" /></a>
                                     <header>
                                         <h3>Eduardo</h3>
                                     </header>
@@ -111,7 +111,7 @@
 
                                 <div class="foto">
                                     <section class="box2">
-                                        <img src="Foto_pedro.jpeg" alt="" width="240px" height="300px" /></a>
+                                        <img src="/Site_institucional/imgs/Foto_pedro.jpeg" alt="" width="240px" height="300px" /></a>
                                         <header>
                                             <h3>Pedro</h3>
                                         </header>
@@ -123,7 +123,7 @@
 
                                     <div class="foto">
                                         <section class="box2">
-                                            <img src="Foto_marcelo.jpeg" alt="" width="240px" height="300px" /></a>
+                                            <img src="/Site_institucional/imgs/Foto_marcelo.jpeg" alt="" width="240px" height="300px" /></a>
                                             <header>
                                                 <h3>Marcelo</h3>
                                             </header>
