--- a/dashboardATT/dashboard.html
+++ b/dashboardATT/dashboard.html
@@ -16,13 +16,13 @@
 <body>
   <div class="pai">
     <div class="header">
-      <img src="logo.png" alt="Logo" class="logo">
+     <a href="/Site_institucional/winetemp.html"><img src="logo.png" alt="Logo" class="logo"></a>
       <div class="container1">
         <ul class="navbar">
-          <li><a href="Sprint2\integraArduinoide/index.html">Tempo Real</a></li>
+          <li><a href="/integraArduinoide/index.html">Tempo Real</a></li>
 
           <li>|</li>
-          <li><a href="Site_institucional/Login.html">Sair</a></li>
+          <li><a href="/Site_institucional/Login.html">Sair</a></li>
         </ul>
       </div>
     </div>
@@ -179,8 +179,8 @@
           label: 'Temperatura Média',
           data: [22, 24, 27, 23, 20, 18],
           borderWidth: 1,
-          borderColor: '#DEB887',
-      backgroundColor: '#F08080'
+         // borderColor: '#DEB887',
+      backgroundColor: '#AE1C1F'
 
         },
 
@@ -188,8 +188,8 @@
           label: 'Umidade Média',
           data: [90, 89, 93, 87, 88, 82],
           borderWidth: 1,
-          borderColor: '#B0E0E6',
-      backgroundColor: '#B0E0E6'
+        //  borderColor: '#B0E0E6',
+      backgroundColor: '#F2CD7C'
 
         }]
       },
@@ -214,16 +214,16 @@
           label: 'Temperatura Média',
           data: [30, 29, 28, 25, 22, 23],
           borderWidth: 1,
-          borderColor: 'rgb(186, 0, 51)',
-      backgroundColor: 'rgb(186, 0, 51)' 
+          borderColor: '#AE1C1F',
+      backgroundColor: '#AE1C1F' 
         },
 
         {
           label: 'Umidade Média',
           data: [80, 82, 80, 85, 80, 83],
           borderWidth: 1,
-          borderColor: '#B0E0E6',
-      backgroundColor: '#B0E0E6'
+          borderColor: '#F2CD7C',
+      backgroundColor: '#F2CD7C'
         }]
       },
 
@@ -244,9 +244,9 @@
         label: 'Quantidade de barris:',
         data: [20, 250, 10],
         backgroundColor: [
-          'rgb(215, 166, 124)',
-          'rgb(186, 0, 51)',
-          'rgb(255, 205, 86)'
+          '#F2CD7C',
+          '#AE1C1F',
+          '#EA937E'
         ],
         hoverOffset: 4
       }]
