--- a/integraArduinoide/index.html
+++ b/integraArduinoide/index.html
@@ -21,10 +21,10 @@
   
     <div class="pai">
         <div class="header">
-          <img src="logo.png" alt="Logo" class="logo">
+          <a href="/Site_institucional/winetemp.html"><img src="logo.png" alt="Logo" class="logo"></a>
           <div class="container1">
             <ul class="navbar">
-              <li><a href="/Sprint2/dashboardATT/dashboard.html">Geral</a></li>
+              <li><a href="/dashboardATT/dashboard.html">Geral</a></li>
     
               <li>|</li>
               <li><a href="/Sprint2/Site_institucional/Login.html">Sair</a></li>
