--- a/Site_institucional/winetemp.html
+++ b/Site_institucional/winetemp.html
@@ -13,14 +13,14 @@
 
 <body>
     <div class="header">
-        <a href="#sobre"><img src="imgs/Logo.png" alt="Logo" class="logo"></a>
+        <img src="imgs/Logo.png" alt="Logo" class="logo">
         <div class="container">
             <ul class="navbar">
-                <li><a href="#sobre-nos">Sobre Nós</a></li>
+                <li><a href="#">Sobre</a></li>
 
-                <li><a href="Login.html">Dashboard</a></li>
+                <li><a href="#">Nossos valores</a></li>
 
-                <li><a href="/Calculadora/Calculadora1.html">Simulador Financeiro</a></li>
+                <li><a href="#">Contato</a></li>
 
                 <li><a href="Cadastro.html">Cadastre-se</a></li>
                 <li>|</li>
@@ -42,103 +42,6 @@
         </div>
     </div>
 
-
-    <div class="sobre">
-        <div class="container">
-            <div class="card">
-                <img src="imgs/imagem-de-barris-de-vinho.avif" alt="">
-                <h4>Quem somos</h4>
-                <p>Somos uma empresa de tecnologia voltada ao ramo de controle de temperatura e umidade em Vínicolas,
-                    visando diminuir percas e otimizar seu negócio,
-                    para uma gestão mas eficiente com sistemas de qualidade.
-                </p>
-
-            </div>
-        </div>
-    </div>
-    <!-- "Nossa equipe" -->
-    <div id="equipe">
-        <h1>Nossa equipe</h1>
-        <section>
-            <div class="row">
-                <div class="foto">
-                    <section class="box2">
-                        <img src="/Site_institucional/imgs/Foto_luiz.jpeg" alt="" width="240px" height="300px" /></a>
-                        <header>
-                            <h3>Luiz</h3>
-                        </header>
-                        <p>
-                            <!-- Responsavel pela criação e desenvolvimento do WebSite -->
-                        </p>
-
-                    </section>
-
-                    <div class="foto">
-                        <section class="box2">
-                            <img src="/Site_institucional/imgs/Foto_kaue.jpeg" alt="" width="240px" height="300px" /></a>
-                            <header>
-                                <h3>Kauê</h3>
-                            </header>
-                            <p>
-                                <!-- Responsavel pela criação e desenvolvimento do WebSite -->
-                            </p>
-                        </section>
-
-                        <div class="foto">
-                            <section class="box2">
-                                <img src="/Site_institucional/imgs/Foto_rebeca.jpeg" alt="" width="240px" height="300px" />
-                                </a>
-                                <header>
-                                    <h3>Rebeca</h3>
-                                </header>
-                                <p>
-                                    <!-- Responsavel pela criação e desenvolvimento do algoritmo -->
-                                </p>
-                            </section>
-</div>
-                                </div>
-                            </div>
-                            <div class="foto">
-                                <section class="box2">
-                                    <img src="/Site_institucional/imgs/Foto_eduardo.jpeg" alt="" width="240px" height="300px" /></a>
-                                    <header>
-                                        <h3>Eduardo</h3>
-                                    </header>
-                                    <p>
-                                        <!-- Responsavel pela criação e desenvolvimento do algoritmo -->
-                                    </p>
-                                </section>
-
-                                <div class="foto">
-                                    <section class="box2">
-                                        <img src="/Site_institucional/imgs/Foto_pedro.jpeg" alt="" width="240px" height="300px" /></a>
-                                        <header>
-                                            <h3>Pedro</h3>
-                                        </header>
-                                        <p>
-                                            <!-- Responsavel pela criação e desenvolvimento do algoritmo -->
-                                        </p>
-
-                                    </section>
-
-                                    <div class="foto">
-                                        <section class="box2">
-                                            <img src="/Site_institucional/imgs/Foto_marcelo.jpeg" alt="" width="240px" height="300px" /></a>
-                                            <header>
-                                                <h3>Marcelo</h3>
-                                            </header>
-                                            <p>
-                                                <!-- Responsavel pela criação e desenvolvimento do algoritmo -->
-                                            </p>
-
-                                        </section>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-    </div>
     <div class="servicos">
         <img src="" alt="">
         <div class="card-servicos">
@@ -162,37 +65,145 @@
         </div>
     </div>
 
-    </div>
-    </div>
+    <div class="winetemp">
+        <!-- Seção "Por que Wine Temp?" -->
+        <section id="por-que-winetemp">
+            <h5>Por que a <br> WineTemp?</h5>
+            <div class="container">
+                <div class="card">
+                    <h4>Tecnologia de Ponta</h4>
+                    <p>Utilizamos o que há de mais avançado em tecnologia de monitoramento de temperatura e umidade.</p>
+                </div>
+                <div class="card">
+                    <h4>Experiência e Conhecimento</h4>
+                    <p>Com anos de experiência no setor, estamos preparados para atender às necessidades mais exigentes
+                        dos
+                        apreciadores de vinho.</p>
+                </div>
+                <div class="card">
+                    <h4>Conveniência e Tranquilidade</h4>
+                    <p>Com nosso sistema de monitoramento remoto, você pode acessar os dados de seus barris de vinho a
+                        qualquer momento, de qualquer lugar.</p>
+                </div>
+                <div class="card">
+                    <h4>Compromisso com a Satisfação do Cliente</h4>
+                    <p>Priorizamos a satisfação do cliente em tudo o que fazemos. Estamos aqui para atender às suas
+                        necessidades, responder às suas perguntas e garantir que sua experiência conosco seja
+                        excepcional.
+                    </p>
+                </div>
+            </div>
+        </section>
 
+        <div class="equipe">
+            <div class="sobre">
+                <div class="container">
+                    <div class="card">
+                        <img src="imgs/imagem-de-barris-de-vinho.avif" alt="">
+                        <h4>Quem somos</h4>
+                        <p>Somos uma empresa de tecnologia voltada ao ramo de controle de temperatura e umidade em
+                            Vínicolas,
+                            visando diminuir percas e otimizar seu negócio,
+                            para uma gestão mas eficiente com sistemas de qualidade.
+                        </p>
 
-    <!-- Seção "Por que Wine Temp?" -->
-    <section id="por-que-winetemp">
-        <div class="container">
-            <h2 class="titulo-card">Por que a <br>
-                WineTemp?</h2>
-            <div class="card">
-                <h4>Tecnologia de Ponta</h4>
-                <p>Utilizamos o que há de mais avançado em tecnologia de monitoramento de temperatura e umidade.</p>
-            </div>
-            <div class="card">
-                <h4>Experiência e Conhecimento</h4>
-                <p>Com anos de experiência no setor, estamos preparados para atender às necessidades mais exigentes dos
-                    apreciadores de vinho.</p>
-            </div>
-            <div class="card">
-                <h4>Conveniência e Tranquilidade</h4>
-                <p>Com nosso sistema de monitoramento remoto, você pode acessar os dados de seus barris de vinho a
-                    qualquer momento, de qualquer lugar.</p>
-            </div>
-            <div class="card">
-                <h4>Compromisso com a Satisfação do Cliente</h4>
-                <p>Priorizamos a satisfação do cliente em tudo o que fazemos. Estamos aqui para atender às suas
-                    necessidades, responder às suas perguntas e garantir que sua experiência conosco seja excepcional.
-                </p>
+                    </div>
+                </div>
             </div>
         </div>
-    </section>
+    </div>
+
+    <!-- "Nossa equipe" -->
+    <div class="equipe">
+        <div class="equipe2">
+
+            <h1>Nossa equipe:</h1>
+
+            <section>
+
+                <div class="body-foto">
+                    <div>
+                        <section>
+                            <img src="imgs/Foto_luiz.jpeg" alt="" width="240px" height="300px" /></a>
+                            <header>
+                                <h3>Luiz</h3>
+                            </header>
+                            <p>
+                                <!-- Responsavel pela criação e desenvolvimento do WebSite -->
+                            </p>
+                        </section>
+                    </div>
+
+                    <div>
+                        <section>
+                            <img src="imgs/Foto_kaue.jpeg" alt="" width="240px" height="300px" /></a>
+                            <header>
+                                <h3>Kauê</h3>
+                            </header>
+                            <p>
+                                <!-- Responsavel pela criação e desenvolvimento do WebSite -->
+                            </p>
+                        </section>
+                    </div>
+
+                    <div>
+                        <section>
+                            <img src="imgs/Foto_rebeca.jpeg" alt="" width="240px" height="300px" />
+                            </a>
+                            <header>
+                                <h3>Rebeca</h3>
+                            </header>
+                            <p>
+                                <!-- Responsavel pela criação e desenvolvimento do algoritmo -->
+                            </p>
+                        </section>
+                    </div>
+                </div>
+
+                <div class="body-foto">
+                    <div>
+                        <section>
+                            <img src="imgs/Foto_eduardo.jpeg" alt="" width="240px" height="300px" /></a>
+                            <header>
+                                <h3>Eduardo</h3>
+                            </header>
+                            <p>
+                                <!-- Responsavel pela criação e desenvolvimento do algoritmo -->
+                            </p>
+                        </section>
+                    </div>
+
+                    <div>
+                        <section>
+                            <img src="imgs/Foto_pedro.jpeg" alt="" width="240px" height="300px" /></a>
+                            <header>
+                                <h3>Pedro</h3>
+                            </header>
+                            <p>
+                                <!-- Responsavel pela criação e desenvolvimento do algoritmo -->
+                            </p>
+
+                        </section>
+                    </div>
+
+                    <div>
+                        <section>
+                            <img src="imgs/Foto_marcelo.jpeg" alt="" width="240px" height="300px" /></a>
+                            <header>
+                                <h3>Marcelo</h3>
+                            </header>
+                            <p>
+                                <!-- Responsavel pela criação e desenvolvimento do algoritmo -->
+                            </p>
+
+                            <br>
+
+                        </section>
+                    </div>
+                </div>
+            </section>
+        </div>
+    </div>
 
     <!-- Seção "Sobre Nós" -->
     <section id="sobre-nos">
