att cadastro/login

--- a/Site_institucional/Login.html
+++ b/Site_institucional/Login.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <link rel="stylesheet" href="style-login.css">
+    <link rel="stylesheet" href="css/style-login.css">
     <link
         href="https://fonts.googleapis.com/css2?family=Sora:wght@200;400&family=Source+Sans+3:wght@300;400&display=swap"
         rel="stylesheet">
@@ -52,7 +52,7 @@
 
     <div class="svg">
 
-        <img src="img.svg" class="img">
+        <img src="/Site_institucional/imgs/img.svg" class="img">
        
     </div>
 
