--- a/Site_institucional/Cadastro.html
+++ b/Site_institucional/Cadastro.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastro</title>
-    <link rel="stylesheet" href="style-cadastro.css">
+    <link rel="stylesheet" href="css/style-cadastro.css">
     <link href="https://fonts.googleapis.com/css2?family=Sora:wght@200;400&family=Source+Sans+3:wght@300;400&display=swap"rel="stylesheet">
 
 </head>
@@ -71,7 +71,7 @@
 
     <div class="svg">
         
-        <img src="img.svg" class="img">
+        <img src="imgs/img.svg" class="img">
        
     </div>
 
