--- a/Site_institucional/winetemp.html
+++ b/Site_institucional/winetemp.html
@@ -28,6 +28,9 @@
                 <li>|</li>
                 <li><a href="Login.html">Login</a></li>
             </ul>
+            <div>
+                
+            </div>
         </div>
     </div>
 
