Adicionado um alerta ao entrar na dashboard, alteração nas sombras de cada card e alterado o título do card três para: Geral - Momento atual

--- a/Site_institucional/dashboard.html
+++ b/Site_institucional/dashboard.html
@@ -30,7 +30,7 @@
 
     <div class="grupo">
       <div class="father">
-        <h1>Bem Vindo ao Dashboard Brandão</h1>
+        <h1>Bem Vindo ao Dashboard</h1>
 
         <div class="child">
           <div class="child-left">
@@ -132,7 +132,7 @@
               </div>
             </div>
             <div class="card-item-3">
-              <h2>Sensor 2</h2>
+              <h2>Geral - Momento atual</h2>
               <div class="tela3">
                   <div class="alerta">
                     <div class="organizacao">
@@ -169,6 +169,8 @@
   </div>
 
   <script>
+    alert('Barril A está com a temperatura elevada. Risco de perda de vinho!')
+
     const ctx = document.getElementById('myChart');
 
     new Chart(ctx, {
