Correção do resultado da Calculadora e setas para voltar a pagina anterior

--- a/Site_institucional/Login.html
+++ b/Site_institucional/Login.html
@@ -20,6 +20,12 @@
         <canvas></canvas>
     </div>
 
+    <div class="voltar">
+
+        <a href="winetemp.html"><img src="imgs/voltar.png" class="img2"></a>
+
+    </div>
+
     <div class="pai">
 
         <h1>Faça o login</h1>
