--- a/Site_institucional/Cadastro.html
+++ b/Site_institucional/Cadastro.html
@@ -18,6 +18,12 @@
         <canvas></canvas>
     </div>
 
+    <div class="voltar">
+
+        <a href="winetemp.html"><img src="imgs/voltar.png" class="img2"></a>
+
+    </div>
+
     <div class="pai">
 
         <h1>Crie sua conta</h1>
