--- a/Site_institucional/Calculadora1.html
+++ b/Site_institucional/Calculadora1.html
@@ -4,27 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculadora</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style-calculadora.css">
     <link
         href="https://fonts.googleapis.com/css2?family=Sora:wght@200;400&amp;family=Source+Sans+3:wght@300;400&amp;display=swap"
         rel="stylesheet">
 </head>
 
 <body>
+
     <div class="header">
         <img src="imgs/Logo.png" alt="Logo" class="logo"><a href="winetemp.html"></a>
         <div class="container">
             <ul class="navbar">
-                <li><a href="#servicos">Nossos serviços</a></li>
-
-                <li><a href="#por-que-winetemp">Por que WineTemp</a></li>
-
-                <li><a href="#fotos">Nossa equipe</a></li>
-
-                <li><a href="#sobre-nos">Sobre</a></li>
-
-                <li><a href="Calculadora1.html">Simulador financeiro</a></li>
-
          
                     <li><a href="Cadastro.html">Cadastre-se</a></li>
                     <li>|</li>
@@ -38,6 +29,11 @@
         </div>
     </div>
 
+    <div class="voltar">
+
+        <a href="winetemp.html"><img src="imgs/voltar.png" class="img2"></a>
+
+    </div>
 
     <div class="engloba">
         <div class="mensagem" id="mensagem">
