Correção do botão em Tempo Real da dashboard e dos botoes da dashboard Tempo Real

--- a/Site_institucional/dashboard.html
+++ b/Site_institucional/dashboard.html
@@ -19,7 +19,7 @@
      <a href="/Site_institucional/winetemp.html"><img src="imgs/Logo.png" alt="Logo" class="logo"></a>
       <div class="container1">
         <ul class="navbar">
-          <li><a href="/integraArduinoide/index.html">Tempo Real</a></li>
+          <li><a href="..\integraArduinoide\index.html">Tempo Real</a></li>
 
           <li>|</li>
           <li><a href="Login.html">Sair</a></li>
