--- a/integraArduinoide/index.html
+++ b/integraArduinoide/index.html
@@ -24,10 +24,10 @@
           <a href="/Site_institucional/winetemp.html"><img src="logo.png" alt="Logo" class="logo"></a>
           <div class="container1">
             <ul class="navbar">
-              <li><a href="/dashboardATT/dashboard.html">Geral</a></li>
+              <li><a href="..\Site_institucional\dashboard.html">Geral</a></li>
     
               <li>|</li>
-              <li><a href="/Sprint2/Site_institucional/Login.html">Sair</a></li>
+              <li><a href="..\Site_institucional\Login.html">Sair</a></li>
             </ul>
           </div>
         </div>
