--- a/Site_institucional/Login.html
+++ b/Site_institucional/Login.html
@@ -82,7 +82,7 @@
         var email = demo_email.value
         var senha = demo_senha.value
 
-        if (email == 'brandao@gmail.com' && senha == 'brandao123') {
+        if (email == 'fernando.brandao@sptech.school' && senha == 'brandao123') {
             window.location= "dashboard.html"
         } else {
             alert('Senha ou email incorretos.')
