Correção das cores da dashboard

--- a/Site_institucional/dashboard.html
+++ b/Site_institucional/dashboard.html
@@ -217,32 +217,32 @@ new Chart(ctx3, {
       label: 'Setor 1 - Temperatura',
       data: [23, 15, 22, 25, 27, 18],
       borderWidth: 1,
-      borderColor: '#AE1C1F',
-  backgroundColor: '#AE1C1F' 
+      borderColor: '#701214',
+  backgroundColor: '#701214' 
     },
 
     {
       label: 'Setor 1 - Umidadade',
       data: [80, 76, 80, 76, 80, 78],
       borderWidth: 1,
-      borderColor: '#4682B4',
-  backgroundColor: '#4682B4'
+      borderColor: '#D61C21',
+  backgroundColor: '#D61C21'
     },  
     
     {
       label: 'Setor 2 - Temperatura',
       data: [10, 15, 12, 20, 8, 8],
       borderWidth: 1,
-      borderColor: '#F4A460',
-  backgroundColor: '#F4A460'
+      borderColor: '#F2CD7C',
+  backgroundColor: '#F2CD7C'
     },
 
     {
       label: 'Setor 2 - Umidade',
       data: [78, 70, 55, 75, 76, 78],
       borderWidth: 1,
-      borderColor: '#F2CD7C',
-  backgroundColor: '#F2CD7C'
+      borderColor: '#F4A460',
+  backgroundColor: '#F4A460'
     }]
   },
 
